# panini

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  mise.dev.toml  mise.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/panini/: Cargo.toml
crates/panini-analyze/: Cargo.toml
crates/panini-analyze/src/: lib.rs
crates/panini-cli/: Cargo.toml
crates/panini-cli/src/: main.rs
crates/panini-cli/tests/: cli.rs
crates/panini-data/: Cargo.toml
crates/panini-data/src/: lib.rs
crates/panini-lipi/: Cargo.toml
crates/panini-lipi/fuzz/: Cargo.toml
crates/panini-lipi/src/: lib.rs  slp1.rs
crates/panini-prakriya/: Cargo.toml
crates/panini-prakriya/src/: context.rs  controller.rs  it_samjna.rs  lib.rs  prakriya.rs  rule.rs  term.rs  tinanta.rs
crates/panini/src/: lib.rs
crates/panini/tests/: paradigm.rs  roundtrip.rs  trace.rs
data/: ATTRIBUTION.md  dhatupatha.tsv  tin.tsv
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-07-19-mise-dep-ci-refresh.md  2026-07-19-panini-astadhyayi-v1.md  2026-07-20-atmanepada.md  2026-07-20-lan-lot-lakaras.md  2026-07-20-vidhilin-lakara.md  2026-07-21-divadi-tudadi-ganas.md  2026-07-22-adadi-gana-5a-aluk-core.md  2026-07-23-adadi-vidhilin-5b.md  2026-07-24-adadi-ad-cartva-5c.md
docs/superpowers/specs/: 2026-07-19-mise-dep-ci-refresh-design.md  2026-07-19-panini-astadhyayi-design.md  2026-07-20-atmanepada-design.md  2026-07-20-lan-lot-lakaras-design.md  2026-07-20-vidhilin-lakara-design.md  2026-07-21-divadi-tudadi-ganas-design.md  2026-07-22-adadi-gana-design.md  (+2 more)
(+1 files in other folders)
